<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CatalogActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/edit_mobile_image"
            android:layout_width="@dimen/image_width"
            android:layout_height="@dimen/image_width"
            android:contentDescription="@string/no_image_photo"
            android:src="@drawable/no_image" />

        <EditText
            android:id="@+id/edit_mobile_model"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/edit_mobile_image"
            android:hint="@string/mobile_model_hint"
            android:inputType="textCapWords" />



        <Spinner
            android:id="@+id/spinner_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/edit_mobile_model"
            android:layout_toRightOf="@id/edit_mobile_image"
            android:spinnerMode="dropdown" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price_title" />

        <EditText
            android:id="@+id/edit_mobile_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/zero_price"
            android:inputType="number" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/euro_symbol" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/available"
        android:textAppearance="?android:textAppearanceMedium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_minus"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:text="@string/minus" />

        <EditText
            android:id="@+id/edit_mobile_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:textAppearance="?android:textAppearanceMedium"
            tools:text="1" />

        <Button
            android:id="@+id/button_plus"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:text="@string/plus" />
    </LinearLayout>

    <EditText
        android:id="@+id/edit_supplier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/supplier_hint"
        android:inputType="textCapWords" />

    <EditText
        android:id="@+id/edit_supplier_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/telephone_hint"
        android:inputType="phone" />

    <EditText
        android:id="@+id/edit_supplier_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/order_now_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_now"
        android:textAppearance="?android:textAppearanceMedium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/button_telephone"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:contentDescription="@string/telephone_image_decc"
            android:src="@drawable/ic_call_white_24dp" />

        <ImageButton
            android:id="@+id/button_email"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:contentDescription="@string/email_image_desc"
            android:src="@drawable/ic_email_white_24dp" />
    </LinearLayout>

    <Button
        android:id="@+id/button_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_button" />

</LinearLayout>